--- a/project/src/main/res/values-da/strings.xml
+++ b/project/src/main/res/values-da/strings.xml
@@ -6,6 +6,28 @@
     <string name="pick_up_time">Afhentningstidspunkt</string>
     <!-- Car search label for drop-off time-->
     <string name="drop_off_time">Afleveringstidspunkt</string>
+    <!-- Label for pickup location selector -->
+    <string name="pick_up_location">Afhentningssted</string>
+    <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
+    <string name="same_as_pick_up">Samme som afhentning</string>
+    <!-- Label for Car Search Screen header -->
+    <string name="dates_and_location">Datoer og sted</string>
+    <!-- Label for Cars date button -->
+    <string name="select_pickup_and_dropoff_dates">Vælg afhentnings- og afleveringsdatoer</string>
+    <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
+    <string name="select_return_date_TEMPLATE">%1$s – Vælg returdato</string>
+    <!-- Label for pick-up time picker -->
+    <string name="pick_up_time_label">Afhentning</string>
+    <!-- Label for drop-up time picker -->
+    <string name="drop_off_time_label">Aflevering</string>
+    <!-- Label for showing users that drop-off location has to be same as pick-up location -->
+    <string name="drop_off_same_as_pick_up">Afleveringssted og afhentningssted skal være det samme</string>
+    <!-- Error messge for missing Origin in search form -->
+    <string name="error_missing_origin_param">Afrejsested mangler</string>
+    <!-- Error messge for missing Start date in search form -->
+    <string name="error_missing_start_date_param">Startdato mangler</string>
+    <!-- Error messge for missing End date date in search form -->
+    <string name="error_missing_end_date_param">Slutdato mangler</string>
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
@@ -137,15 +159,15 @@
     <!-- Default label for unnamed areas/neighborhoods -->
     <string name="Other_Areas">Andre områder</string>
     <!-- Short label for "sort by popular" button -->
-    <string name="popular">populær</string>
+    <string name="popular">Populær</string>
     <!-- Short label for "sort by price" button -->
-    <string name="price">pris</string>
+    <string name="price">Pris</string>
     <!-- Short label for "sort by rating" button -->
-    <string name="rating">antal stjerner</string>
+    <string name="rating">Antal stjerner</string>
     <!-- Short label for "sort by distance" button -->
-    <string name="distance">afstand</string>
+    <string name="distance">Afstand</string>
     <!-- Short label for "sort by discounts" button -->
-    <string name="discounts">rabatter</string>
+    <string name="discounts">Rabatter</string>
     <!-- Content description for "sort by popular" button -->
     <string name="cd_sort_by_popular">Tryk for at søge efter de mest populære hoteller.</string>
     <!-- Content description for "sort by price" button -->
@@ -253,7 +275,7 @@
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Returrejse</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
-    <string name="total_with_tax">Samlet beløb</string>
+    <string name="total_with_tax">Samlet pris inkl. skat</string>
     <!-- Label describing the total price of the flight or hotel, when we're including mandatory taxes & fees -->
     <string name="trip_total">Samlet pris for rejsen</string>
 
@@ -367,6 +389,10 @@
     <!-- Notifications -->
     <!-- Title for flight Check In Local Notification -->
     <string name="Check_in_available">Indtjekning tilgængeligt</string>
+    <!-- Title for flight share In Local Notification -->
+    <string name="Share_flight_itinerary_title">Del din flyrejse</string>
+    <!-- Content for flight share In Local Notification -->
+    <string name="Share_flight_itinerary_content">Tillad andre at få opdateringer i realtid, når du rejser.</string>
     <!-- Content for flight Check In Local Notification -->
     <string name="x_flight_to_x_TEMPLATE">%1$s fly til %2$s</string>
     <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
@@ -829,6 +855,7 @@
     <string name="itin_action_redeem">Indløs</string>
     <string name="itin_action_support">Support</string>
     <string name="itin_action_share">Del</string>
+    <string name="itin_action_view">Se rejseplan</string>
 
     <!-- Itin webview titles -->
     <string name="webview_title_print_vouchers">Udskriv kuponer</string>
@@ -1160,7 +1187,7 @@
     <!-- Label for Overview activity in task manager -->
     <string name="Overview">Oversigt</string>
     <!-- Trip total price label -->
-    <string name="total_price_label">Pris i alt</string>
+    <string name="total_price_label">Samlet pris for rejsen</string>
     <!-- Your trip to template -->
     <string name="your_trip_to_TEMPLATE">Rejse til %1$s</string>
     <!-- Includes taxes and fees -->
@@ -1214,7 +1241,7 @@
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">Der trækkes %1$s fra dit kort</string>
     <!-- Amount to be paid now -->
-    <string name="Amount_to_be_paid_now_TEMPLATE">Beløb til betaling nu %1$s</string>
+    <string name="Amount_to_be_paid_now_TEMPLATE">Beløb til betaling nu: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
     <string name="collected_by_the_hotel_TEMPLATE">Opkræves på hotellet: %1$s</string>
     <!-- "Finish Booking" button that appears after CVV is entered -->
@@ -1246,7 +1273,7 @@
     <!-- Button showing for when the user can click it to close the cost breakdown dialog -->
     <string name="done">Afslut</string>
     <!-- Label to show user in cost breakdown for the total being charged to them right now -->
-    <string name="total_due_today">Samlet beløb til betaling i dag</string>
+    <string name="total_due_today">Beløb der skal betales til Expedia i dag</string>
     <!-- Label to show user when they use unsupported characters in their name or address -->
     <string name="please_use_the_roman_alphabet">Anvend latinske bogstaver</string>
     <!-- Label to show user when they use unsupported characters in their email -->
@@ -1254,9 +1281,17 @@
     <!-- Row header for when we show resort fees as its own line item -->
     <string name="fees_paid_at_hotel">Gebyrer der betales på hotellet:</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe Expedia at the time of reservation-->
-    <string name="total_due_to_expedia_today">Samlet beløb der skal betales til Expedia i dag:</string>
+    <string name="total_due_to_expedia_today">Beløb der skal betales til Expedia i dag:</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">Resortgebyret på &lt;b&gt;%1$s&lt;/b&gt; vil blive opkrævet på hotellet. Den samlede pris for dit ophold er &lt;b&gt;%2$s&lt;/b&gt;.</string>
+    <!-- Pay later disclaimer at bottom of checkout -->
+    <string name="pay_later_disclaimer_TEMPLATE">Det samlede beløb for din rejse er &lt;b&gt;%1$s&lt;/b&gt;. Du betaler det samlede beløb for din reservation på hotellet (i hotellets lokale valuta) under dit ophold.</string>
+    <!-- Pay later disclaimer with deposit -->
+    <string name="pay_later_deposit_disclaimer_TEMPLATE">Der vil blive opkrævet et depositum på &lt;b&gt;%1$s&lt;/b&gt; nu. Du betaler det resterende beløb for din reservation på hotellet (i hotellets lokale valuta) under dit ophold.</string>
+    <!-- Pay later disclaimer with resort fees -->
+    <string name="pay_later_resort_disclaimer_TEMPLATE">Den samlede pris for din rejse, inklusive resortgebyret på &lt;b&gt;%1$s&lt;/b&gt;, er &lt;b&gt;%2$s&lt;/b&gt;. Du betaler det samlede beløb for din reservation på hotellet (i hotellets lokale valuta) under dit ophold.</string>
+    <!-- Pay later disclaimer with deposit and resort fees -->
+    <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">Den samlede pris for din rejse, inklusive resortgebyret på &lt;b&gt;%1$s&lt;/b&gt;, er &lt;b&gt;%2$s&lt;/b&gt;. Du betaler det resterende beløb for din reservation på hotellet (i hotellets lokale valuta) under dit ophold.</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1704,8 +1739,8 @@
     <string name="drag_to_extend_your_stay">&lt;b&gt;Træk&lt;/b&gt; for at forlænge dit ophold.</string>
     <!-- Child age dialog button -->
     <string name="button_done">Afslut</string>
-    <!-- Done button text in hotel Confirmation screen for VSC -->
-    <string name="button_done_vsc_confirmation">Afslut</string>
+    <!-- Done button text in Confirmation screens -->
+    <string name="button_confirmation_done">Afslut</string>
     <!-- Label for child age selection prompt -->
     <plurals name="select_each_childs_age">
         <item quantity="one">Vælg barnets alder</item>
@@ -2137,7 +2172,7 @@
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">Inkluderet</string>
     <!-- Label for the "Mandatory Fees" -->
-    <string name="MandatoryFees">Hotelgebyr (betales på hotellet)</string>
+    <string name="MandatoryFees">Gebyrer der betales til hotellet</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Rabat</string>
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
