--- a/project/src/main/res/values-pt-rBR/strings.xml
+++ b/project/src/main/res/values-pt-rBR/strings.xml
@@ -6,6 +6,28 @@
     <string name="pick_up_time">Horário de retirada</string>
     <!-- Car search label for drop-off time-->
     <string name="drop_off_time">Horário de devolução</string>
+    <!-- Label for pickup location selector -->
+    <string name="pick_up_location">Local de retirada</string>
+    <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
+    <string name="same_as_pick_up">O mesmo da retirada</string>
+    <!-- Label for Car Search Screen header -->
+    <string name="dates_and_location">Local e datas</string>
+    <!-- Label for Cars date button -->
+    <string name="select_pickup_and_dropoff_dates">Selecione as datas de retirada e devolução</string>
+    <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
+    <string name="select_return_date_TEMPLATE">%1$s – Selecione a data de devolução</string>
+    <!-- Label for pick-up time picker -->
+    <string name="pick_up_time_label">Retirada</string>
+    <!-- Label for drop-up time picker -->
+    <string name="drop_off_time_label">Devolução</string>
+    <!-- Label for showing users that drop-off location has to be same as pick-up location -->
+    <string name="drop_off_same_as_pick_up">O local de devolução deve ser o mesmo que o local de retirada</string>
+    <!-- Error messge for missing Origin in search form -->
+    <string name="error_missing_origin_param">Faltam informações sobre a origem</string>
+    <!-- Error messge for missing Start date in search form -->
+    <string name="error_missing_start_date_param">Faltam informações sobre a data inicial</string>
+    <!-- Error messge for missing End date date in search form -->
+    <string name="error_missing_end_date_param">Faltam informações sobre a data final</string>
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
@@ -137,15 +159,15 @@
     <!-- Default label for unnamed areas/neighborhoods -->
     <string name="Other_Areas">Outras áreas</string>
     <!-- Short label for "sort by popular" button -->
-    <string name="popular">popular</string>
+    <string name="popular">Popular</string>
     <!-- Short label for "sort by price" button -->
-    <string name="price">preço</string>
+    <string name="price">Preço</string>
     <!-- Short label for "sort by rating" button -->
-    <string name="rating">classif.</string>
+    <string name="rating">Classificação</string>
     <!-- Short label for "sort by distance" button -->
-    <string name="distance">distância</string>
+    <string name="distance">Distância</string>
     <!-- Short label for "sort by discounts" button -->
-    <string name="discounts">descontos</string>
+    <string name="discounts">Descontos</string>
     <!-- Content description for "sort by popular" button -->
     <string name="cd_sort_by_popular">Pressione para organizar pelos hotéis mais populares.</string>
     <!-- Content description for "sort by price" button -->
@@ -253,7 +275,7 @@
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Ida e volta</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
-    <string name="total_with_tax">Total</string>
+    <string name="total_with_tax">Total com imposto</string>
     <!-- Label describing the total price of the flight or hotel, when we're including mandatory taxes & fees -->
     <string name="trip_total">Total da viagem</string>
 
@@ -367,6 +389,10 @@
     <!-- Notifications -->
     <!-- Title for flight Check In Local Notification -->
     <string name="Check_in_available">Check-in disponível</string>
+    <!-- Title for flight share In Local Notification -->
+    <string name="Share_flight_itinerary_title">Compartilhe seu voo</string>
+    <!-- Content for flight share In Local Notification -->
+    <string name="Share_flight_itinerary_content">Permita que outras pessoas recebam atualizações em tempo real de sua viagem.</string>
     <!-- Content for flight Check In Local Notification -->
     <string name="x_flight_to_x_TEMPLATE">%1$s voo para %2$s</string>
     <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
@@ -829,6 +855,7 @@
     <string name="itin_action_redeem">Utilizar</string>
     <string name="itin_action_support">Assistência</string>
     <string name="itin_action_share">Compartilhar</string>
+    <string name="itin_action_view">Visualizar itinerário</string>
 
     <!-- Itin webview titles -->
     <string name="webview_title_print_vouchers">Imprimir vouchers</string>
@@ -1160,7 +1187,7 @@
     <!-- Label for Overview activity in task manager -->
     <string name="Overview">Visão geral</string>
     <!-- Trip total price label -->
-    <string name="total_price_label">Preço total</string>
+    <string name="total_price_label">Total da viagem</string>
     <!-- Your trip to template -->
     <string name="your_trip_to_TEMPLATE">Viagem para %1$s</string>
     <!-- Includes taxes and fees -->
@@ -1214,7 +1241,7 @@
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">%1$s será debitado em seu cartão.</string>
     <!-- Amount to be paid now -->
-    <string name="Amount_to_be_paid_now_TEMPLATE">Valor a ser pago agora %1$s</string>
+    <string name="Amount_to_be_paid_now_TEMPLATE">Valor atual a ser pago: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
     <string name="collected_by_the_hotel_TEMPLATE">A ser cobrado pelo hotel: %1$s</string>
     <!-- "Finish Booking" button that appears after CVV is entered -->
@@ -1246,7 +1273,7 @@
     <!-- Button showing for when the user can click it to close the cost breakdown dialog -->
     <string name="done">Concluído</string>
     <!-- Label to show user in cost breakdown for the total being charged to them right now -->
-    <string name="total_due_today">Total devido hoje</string>
+    <string name="total_due_today">Devido para a Expedia hoje</string>
     <!-- Label to show user when they use unsupported characters in their name or address -->
     <string name="please_use_the_roman_alphabet">Use o alfabeto latino</string>
     <!-- Label to show user when they use unsupported characters in their email -->
@@ -1254,9 +1281,17 @@
     <!-- Row header for when we show resort fees as its own line item -->
     <string name="fees_paid_at_hotel">Taxas pagas ao hotel:</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe Expedia at the time of reservation-->
-    <string name="total_due_to_expedia_today">Total devido para a Expedia hoje:</string>
+    <string name="total_due_to_expedia_today">Devido para a Expedia hoje:</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
-    <string name="resort_fee_disclaimer_TEMPLATE">A taxa de resort de &lt;b&gt;%1$s&lt;/b&gt; será cobrada pelo hotel. O total final para sua estadia será de &lt;b&gt;%2$s&lt;/b&gt;.</string>
+    <string name="resort_fee_disclaimer_TEMPLATE">A taxa de resort de &lt;b&gt;%1$s&lt;/b&gt; será cobrada pelo hotel. O total para sua estadia será de &lt;b&gt;%2$s&lt;/b&gt;.</string>
+    <!-- Pay later disclaimer at bottom of checkout -->
+    <string name="pay_later_disclaimer_TEMPLATE">O total para sua viagem será de &lt;b&gt;%1$s&lt;/b&gt;. Você pagará ao hotel o custo total da reserva (na moeda local do hotel) durante sua estadia.</string>
+    <!-- Pay later disclaimer with deposit -->
+    <string name="pay_later_deposit_disclaimer_TEMPLATE">Um depósito de &lt;b&gt; será cobrado agora. %1$s&lt;/b&gt; Você pagará ao hotel o valor restante da reserva (na moeda local do hotel) durante sua estadia.</string>
+    <!-- Pay later disclaimer with resort fees -->
+    <string name="pay_later_resort_disclaimer_TEMPLATE">O total para sua viagem, incluindo a taxa de resort de &lt;b&gt;%1$s&lt;/b&gt;, é de &lt;b&gt;%2$s&lt;/b&gt;. Você pagará ao hotel o custo total da reserva (na moeda local do hotel) durante sua estadia.</string>
+    <!-- Pay later disclaimer with deposit and resort fees -->
+    <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">O total para sua viagem, incluindo a taxa de resort de &lt;b&gt;%1$s&lt;/b&gt;, é de &lt;b&gt;%2$s&lt;/b&gt;. Você pagará ao hotel o valor restante da reserva (na moeda local do hotel) durante sua estadia.</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1704,8 +1739,8 @@
     <string name="drag_to_extend_your_stay">&lt;b&gt;Arraste&lt;/b&gt; para estender sua estadia.</string>
     <!-- Child age dialog button -->
     <string name="button_done">Concluído</string>
-    <!-- Done button text in hotel Confirmation screen for VSC -->
-    <string name="button_done_vsc_confirmation">Concluído</string>
+    <!-- Done button text in Confirmation screens -->
+    <string name="button_confirmation_done">Concluído</string>
     <!-- Label for child age selection prompt -->
     <plurals name="select_each_childs_age">
         <item quantity="one">Selecione a idade da criança</item>
@@ -2137,7 +2172,7 @@
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">Incluídos</string>
     <!-- Label for the "Mandatory Fees" -->
-    <string name="MandatoryFees">Tarifas do hotel (pagas no hotel)</string>
+    <string name="MandatoryFees">Taxas pagas ao hotel</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Desconto</string>
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
