--- a/project/src/main/res/values-sv/strings.xml
+++ b/project/src/main/res/values-sv/strings.xml
@@ -6,6 +6,28 @@
     <string name="pick_up_time">Hämtningstid</string>
     <!-- Car search label for drop-off time-->
     <string name="drop_off_time">Avlämningstid</string>
+    <!-- Label for pickup location selector -->
+    <string name="pick_up_location">Plats för hämtning</string>
+    <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
+    <string name="same_as_pick_up">Samma som vid hätning</string>
+    <!-- Label for Car Search Screen header -->
+    <string name="dates_and_location">Datum och plats</string>
+    <!-- Label for Cars date button -->
+    <string name="select_pickup_and_dropoff_dates">Välj hämtnings- och avlämningsdatum</string>
+    <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
+    <string name="select_return_date_TEMPLATE">%1$s – Välj datum för återresa</string>
+    <!-- Label for pick-up time picker -->
+    <string name="pick_up_time_label">Hämtning</string>
+    <!-- Label for drop-up time picker -->
+    <string name="drop_off_time_label">Avlämning</string>
+    <!-- Label for showing users that drop-off location has to be same as pick-up location -->
+    <string name="drop_off_same_as_pick_up">Plats för avlämning måste vara densamma som vid hämtning</string>
+    <!-- Error messge for missing Origin in search form -->
+    <string name="error_missing_origin_param">Avreseort saknas</string>
+    <!-- Error messge for missing Start date in search form -->
+    <string name="error_missing_start_date_param">Startdatum saknas</string>
+    <!-- Error messge for missing End date date in search form -->
+    <string name="error_missing_end_date_param">Slutdatum saknas</string>
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
@@ -137,15 +159,15 @@
     <!-- Default label for unnamed areas/neighborhoods -->
     <string name="Other_Areas">Övriga områden</string>
     <!-- Short label for "sort by popular" button -->
-    <string name="popular">populära</string>
+    <string name="popular">Popularitet</string>
     <!-- Short label for "sort by price" button -->
-    <string name="price">pris</string>
+    <string name="price">Pris</string>
     <!-- Short label for "sort by rating" button -->
-    <string name="rating">betyg</string>
+    <string name="rating">Betyg</string>
     <!-- Short label for "sort by distance" button -->
-    <string name="distance">avstånd</string>
+    <string name="distance">Avstånd</string>
     <!-- Short label for "sort by discounts" button -->
-    <string name="discounts">rabatter</string>
+    <string name="discounts">Rabatter</string>
     <!-- Content description for "sort by popular" button -->
     <string name="cd_sort_by_popular">Tryck för att sortera efter populäraste hotell.</string>
     <!-- Content description for "sort by price" button -->
@@ -206,7 +228,7 @@
     <!-- Rooms and rates pay now -->
     <string name="room_rate_pay_now">Betala nu</string>
     <!-- Rooms and rates pay later deposit due now -->
-    <string name="room_rate_pay_later_due_now">Att betala nu</string>
+    <string name="room_rate_pay_later_due_now">Betalas nu</string>
     <!-- Rooms and rates pay later total -->
     <string name="room_rate_pay_later_total_template">%s totalt</string>
     <!-- Rooms and rates price/night, i.e. $100/night -->
@@ -253,7 +275,7 @@
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Tur och retur</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
-    <string name="total_with_tax">Totalt</string>
+    <string name="total_with_tax">Totalt med skatter</string>
     <!-- Label describing the total price of the flight or hotel, when we're including mandatory taxes & fees -->
     <string name="trip_total">Totalbelopp för resan</string>
 
@@ -367,6 +389,10 @@
     <!-- Notifications -->
     <!-- Title for flight Check In Local Notification -->
     <string name="Check_in_available">Incheckning tillgänglig</string>
+    <!-- Title for flight share In Local Notification -->
+    <string name="Share_flight_itinerary_title">Dela ditt flyg</string>
+    <!-- Content for flight share In Local Notification -->
+    <string name="Share_flight_itinerary_content">Tillåt andra att få uppdateringar i realtid när du reser.</string>
     <!-- Content for flight Check In Local Notification -->
     <string name="x_flight_to_x_TEMPLATE">%1$s flyg till %2$s</string>
     <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
@@ -829,6 +855,7 @@
     <string name="itin_action_redeem">Lös in</string>
     <string name="itin_action_support">Support</string>
     <string name="itin_action_share">Dela</string>
+    <string name="itin_action_view">Se resplan</string>
 
     <!-- Itin webview titles -->
     <string name="webview_title_print_vouchers">Skriv ut kuponger</string>
@@ -1160,7 +1187,7 @@
     <!-- Label for Overview activity in task manager -->
     <string name="Overview">Översikt</string>
     <!-- Trip total price label -->
-    <string name="total_price_label">Totalpris</string>
+    <string name="total_price_label">Totalbelopp för resan</string>
     <!-- Your trip to template -->
     <string name="your_trip_to_TEMPLATE">Resa till %1$s</string>
     <!-- Includes taxes and fees -->
@@ -1214,7 +1241,7 @@
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">Ditt kort kommer att debiteras %1$s</string>
     <!-- Amount to be paid now -->
-    <string name="Amount_to_be_paid_now_TEMPLATE">Belopp att betala nu %1$s</string>
+    <string name="Amount_to_be_paid_now_TEMPLATE">Belopp att betala nu: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
     <string name="collected_by_the_hotel_TEMPLATE">Hotellet debiterar följande: %1$s</string>
     <!-- "Finish Booking" button that appears after CVV is entered -->
@@ -1246,7 +1273,7 @@
     <!-- Button showing for when the user can click it to close the cost breakdown dialog -->
     <string name="done">Klar</string>
     <!-- Label to show user in cost breakdown for the total being charged to them right now -->
-    <string name="total_due_today">Totalt att betala idag</string>
+    <string name="total_due_today">Att betala Expedia idag</string>
     <!-- Label to show user when they use unsupported characters in their name or address -->
     <string name="please_use_the_roman_alphabet">Använd det latinska alfabetet</string>
     <!-- Label to show user when they use unsupported characters in their email -->
@@ -1254,9 +1281,17 @@
     <!-- Row header for when we show resort fees as its own line item -->
     <string name="fees_paid_at_hotel">Avgifter som betalas på hotellet:</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe Expedia at the time of reservation-->
-    <string name="total_due_to_expedia_today">Totalbelopp att betala Expedia idag:</string>
+    <string name="total_due_to_expedia_today">Att betala Expedia idag:</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
-    <string name="resort_fee_disclaimer_TEMPLATE">Resortavgiften på &lt;b&gt;%1$s&lt;/b&gt; kommer att debiteras på hotellet. Totalbeloppet för din vistelse är &lt;b&gt;%2$s&lt;/b&gt;.</string>
+    <string name="resort_fee_disclaimer_TEMPLATE">Resortavgiften på &lt;b&gt;%1$s&lt;/b&gt; kommer att debiteras på hotellet. Det totala priset för din vistelse blir &lt;b&gt;%2$s&lt;/b&gt;.</string>
+    <!-- Pay later disclaimer at bottom of checkout -->
+    <string name="pay_later_disclaimer_TEMPLATE">Totalbeloppet för din resa blir &lt;b&gt;%1$s&lt;/b&gt;. Du betalar hotellet den totala kostnaden för din bokning (i hotellets lokala valuta) under din vistelse.</string>
+    <!-- Pay later disclaimer with deposit -->
+    <string name="pay_later_deposit_disclaimer_TEMPLATE">En deposition på &lt;b&gt;%1$s&lt;/b&gt; kommer att debiteras nu. Du betalar hotellet den resterande kostnaden för din bokning (i hotellets lokala valuta) under din vistelse.</string>
+    <!-- Pay later disclaimer with resort fees -->
+    <string name="pay_later_resort_disclaimer_TEMPLATE">Totalbeloppet för din resa, inklusive resortavgiften på &lt;b&gt;%1$s&lt;/b&gt;, blir &lt;b&gt;%2$s&lt;/b&gt;. Du betalar hotellet den totala kostnaden för din bokning (i hotellets lokala valuta) under din vistelse.</string>
+    <!-- Pay later disclaimer with deposit and resort fees -->
+    <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">Totalbeloppet för din resa, inklusive resortavgiften på &lt;b&gt;%1$s&lt;/b&gt;, blir &lt;b&gt;%2$s&lt;/b&gt;. Du betalar hotellet den resterande kostnaden för din bokning (i hotellets lokala valuta) under din vistelse.</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1704,8 +1739,8 @@
     <string name="drag_to_extend_your_stay">&lt;b&gt;Dra&lt;/b&gt; för att utöka vistelsen.</string>
     <!-- Child age dialog button -->
     <string name="button_done">Klar</string>
-    <!-- Done button text in hotel Confirmation screen for VSC -->
-    <string name="button_done_vsc_confirmation">Klar</string>
+    <!-- Done button text in Confirmation screens -->
+    <string name="button_confirmation_done">Klar</string>
     <!-- Label for child age selection prompt -->
     <plurals name="select_each_childs_age">
         <item quantity="one">Ange barns ålder</item>
@@ -2137,7 +2172,7 @@
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">Inkluderas</string>
     <!-- Label for the "Mandatory Fees" -->
-    <string name="MandatoryFees">Hotellavgifter (betalas på hotellet)</string>
+    <string name="MandatoryFees">Avgifter som betalades på hotellet</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Rabatt</string>
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
