--- a/project/src/main/res/values-th/strings.xml
+++ b/project/src/main/res/values-th/strings.xml
@@ -6,6 +6,28 @@
     <string name="pick_up_time">เวลารับรถ</string>
     <!-- Car search label for drop-off time-->
     <string name="drop_off_time">เวลาส่งคืนรถ</string>
+    <!-- Label for pickup location selector -->
+    <string name="pick_up_location">สถานที่รับรถ</string>
+    <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
+    <string name="same_as_pick_up">เหมือนสถานที่รับรถ</string>
+    <!-- Label for Car Search Screen header -->
+    <string name="dates_and_location">วันที่และสถานที่</string>
+    <!-- Label for Cars date button -->
+    <string name="select_pickup_and_dropoff_dates">เลือกวันที่รับรถและส่งคืนรถ</string>
+    <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
+    <string name="select_return_date_TEMPLATE">%1$s – เลือกวันเดินทางกลับ</string>
+    <!-- Label for pick-up time picker -->
+    <string name="pick_up_time_label">รับรถ</string>
+    <!-- Label for drop-up time picker -->
+    <string name="drop_off_time_label">ส่งคืนรถ</string>
+    <!-- Label for showing users that drop-off location has to be same as pick-up location -->
+    <string name="drop_off_same_as_pick_up">สถานที่ส่งคืนรถต้องเหมือนกับสถานที่รับรถ</string>
+    <!-- Error messge for missing Origin in search form -->
+    <string name="error_missing_origin_param">ไม่มีต้นทาง</string>
+    <!-- Error messge for missing Start date in search form -->
+    <string name="error_missing_start_date_param">ไม่มีวันเริ่มเดินทาง</string>
+    <!-- Error messge for missing End date date in search form -->
+    <string name="error_missing_end_date_param">ไม่มีวันสิ้นสุดการเดินทาง</string>
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
@@ -141,7 +163,7 @@
     <!-- Short label for "sort by price" button -->
     <string name="price">ราคา</string>
     <!-- Short label for "sort by rating" button -->
-    <string name="rating">คะแนน</string>
+    <string name="rating">การจัดอันดับ</string>
     <!-- Short label for "sort by distance" button -->
     <string name="distance">ระยะทาง</string>
     <!-- Short label for "sort by discounts" button -->
@@ -255,7 +277,7 @@
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">ไป-กลับ</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
-    <string name="total_with_tax">ยอดรวม</string>
+    <string name="total_with_tax">ราคารวมภาษี</string>
     <!-- Label describing the total price of the flight or hotel, when we're including mandatory taxes & fees -->
     <string name="trip_total">ราคารวม</string>
 
@@ -369,6 +391,10 @@
     <!-- Notifications -->
     <!-- Title for flight Check In Local Notification -->
     <string name="Check_in_available">มีบริการเช็คอิน</string>
+    <!-- Title for flight share In Local Notification -->
+    <string name="Share_flight_itinerary_title">แชร์เที่ยวบินของคุณ</string>
+    <!-- Content for flight share In Local Notification -->
+    <string name="Share_flight_itinerary_content">ให้เพื่อนๆ ได้รู้อัพเดทแบบสดๆ ขณะที่คุณเดินทาง</string>
     <!-- Content for flight Check In Local Notification -->
     <string name="x_flight_to_x_TEMPLATE">เที่ยวบิน %1$s ไปยัง %2$s</string>
     <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
@@ -831,9 +857,10 @@
     <string name="itin_action_redeem">แลก</string>
     <string name="itin_action_support">ทีมงานบริการ</string>
     <string name="itin_action_share">แชร์</string>
+    <string name="itin_action_view">ดูแผนการเดินทาง</string>
 
     <!-- Itin webview titles -->
-    <string name="webview_title_print_vouchers">พิมพ์บัตรกำนัล</string>
+    <string name="webview_title_print_vouchers">พิมพ์คูปอง</string>
 
     <!-- Itin Share templates -->
     <!-- 1: hotel name 2: check in date 3: check out date -->
@@ -1162,7 +1189,7 @@
     <!-- Label for Overview activity in task manager -->
     <string name="Overview">ดูข้อมูล</string>
     <!-- Trip total price label -->
-    <string name="total_price_label">ยอดรวม</string>
+    <string name="total_price_label">ราคารวม</string>
     <!-- Your trip to template -->
     <string name="your_trip_to_TEMPLATE">การเดินทางไปยัง %1$s</string>
     <!-- Includes taxes and fees -->
@@ -1216,7 +1243,7 @@
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">จะมีการตัดยอดบัตรเป็นจำนวน %1$s บาท</string>
     <!-- Amount to be paid now -->
-    <string name="Amount_to_be_paid_now_TEMPLATE">จำนวนเงินที่ต้องชำระตอนนี้ %1$s</string>
+    <string name="Amount_to_be_paid_now_TEMPLATE">ยอดที่ต้องชำระตอนนี้: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
     <string name="collected_by_the_hotel_TEMPLATE">เรียกเก็บโดยโรงแรม: %1$s</string>
     <!-- "Finish Booking" button that appears after CVV is entered -->
@@ -1248,7 +1275,7 @@
     <!-- Button showing for when the user can click it to close the cost breakdown dialog -->
     <string name="done">เสร็จ</string>
     <!-- Label to show user in cost breakdown for the total being charged to them right now -->
-    <string name="total_due_today">ยอดที่ต้องชำระวันนี้</string>
+    <string name="total_due_today">ยอดที่ต้องจ่ายเอ็กซ์พีเดียวันนี้</string>
     <!-- Label to show user when they use unsupported characters in their name or address -->
     <string name="please_use_the_roman_alphabet">โปรดใช้ตัวอักษรภาษาอังกฤษ</string>
     <!-- Label to show user when they use unsupported characters in their email -->
@@ -1259,6 +1286,14 @@
     <string name="total_due_to_expedia_today">ยอดที่ต้องจ่ายเอ็กซ์พีเดียวันนี้:</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">ค่าธรรมเนียมรีสอร์ทจำนวน &lt;b&gt;%1$s&lt;/b&gt; จะถูกเรียกเก็บที่โรงแรม ราคารวมสำหรับการเข้าพักของคุณจะเป็น &lt;b&gt;%2$s&lt;/b&gt;</string>
+    <!-- Pay later disclaimer at bottom of checkout -->
+    <string name="pay_later_disclaimer_TEMPLATE">ราคารวมสำหรับการเดินทางของคุณคือ &lt;b&gt;%1$s&lt;/b&gt; คุณจะชำระเงินทั้งหมดที่โรงแรม (ในสุกลเงินท้องถิ่นของโรงแรม) เมื่อคุณเข้าพัก</string>
+    <!-- Pay later disclaimer with deposit -->
+    <string name="pay_later_deposit_disclaimer_TEMPLATE">ค่ามัดจำจำนวน &lt;b&gt;%1$s&lt;/b&gt; จะเรียกเก็บตอนนี้ คุณจะชำระยอดเงินที่เหลือที่โรงแรม (ในสุกลเงินท้องถิ่นของโรงแรม) เมื่อคุณเข้าพัก</string>
+    <!-- Pay later disclaimer with resort fees -->
+    <string name="pay_later_resort_disclaimer_TEMPLATE">ราคารวมสำหรับการเดินทางของคุณ ซึ่งรวมค่าธรรมเนียมรีสอร์ท &lt;b&gt;%1$s&lt;/b&gt; แล้ว จะเป็น &lt;b&gt;%2$s&lt;/b&gt; คุณจะชำระเงินทั้งหมดที่โรงแรม (ในสุกลเงินท้องถิ่นของโรงแรม) เมื่อคุณเข้าพัก</string>
+    <!-- Pay later disclaimer with deposit and resort fees -->
+    <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">ราคารวมสำหรับการเดินทางของคุณ ซึ่งรวมค่าธรรมเนียมรีสอร์ท &lt;b&gt;%1$s&lt;/b&gt; แล้ว จะเป็น &lt;b&gt;%2$s&lt;/b&gt; คุณจะชำระยอดเงินที่เหลือที่โรงแรม (ในสุกลเงินท้องถิ่นของโรงแรม) เมื่อคุณเข้าพัก</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1706,8 +1741,8 @@
     <string name="drag_to_extend_your_stay">&lt;b&gt;ลากนิ้ว&lt;/b&gt; เพื่อเลือกระยะเวลาการเข้าพัก</string>
     <!-- Child age dialog button -->
     <string name="button_done">เสร็จ</string>
-    <!-- Done button text in hotel Confirmation screen for VSC -->
-    <string name="button_done_vsc_confirmation">เสร็จ</string>
+    <!-- Done button text in Confirmation screens -->
+    <string name="button_confirmation_done">เสร็จ</string>
     <!-- Label for child age selection prompt -->
     <plurals name="select_each_childs_age">
         <item quantity="one">โปรดระบุอายุเด็ก</item>
@@ -2139,7 +2174,7 @@
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">รวม</string>
     <!-- Label for the "Mandatory Fees" -->
-    <string name="MandatoryFees">ค่าธรรมเนียมโรงแรม (จ่ายที่โรงแรม)</string>
+    <string name="MandatoryFees">ค่าธรรมเนียมที่จ่ายให้โรงแรม</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">ส่วนลด</string>
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
