--- a/project/src/main/res/values-zh/strings.xml
+++ b/project/src/main/res/values-zh/strings.xml
@@ -6,6 +6,28 @@
     <string name="pick_up_time">取车时间</string>
     <!-- Car search label for drop-off time-->
     <string name="drop_off_time">还车时间</string>
+    <!-- Label for pickup location selector -->
+    <string name="pick_up_location">取车地点</string>
+    <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
+    <string name="same_as_pick_up">与取车地点相同</string>
+    <!-- Label for Car Search Screen header -->
+    <string name="dates_and_location">日期和地点</string>
+    <!-- Label for Cars date button -->
+    <string name="select_pickup_and_dropoff_dates">请选择取车和还车日期</string>
+    <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
+    <string name="select_return_date_TEMPLATE">%1$s - 选择返回日期</string>
+    <!-- Label for pick-up time picker -->
+    <string name="pick_up_time_label">取车</string>
+    <!-- Label for drop-up time picker -->
+    <string name="drop_off_time_label">还车</string>
+    <!-- Label for showing users that drop-off location has to be same as pick-up location -->
+    <string name="drop_off_same_as_pick_up">还车地点必须与取车地点相同</string>
+    <!-- Error messge for missing Origin in search form -->
+    <string name="error_missing_origin_param">缺少出发地信息</string>
+    <!-- Error messge for missing Start date in search form -->
+    <string name="error_missing_start_date_param">缺少开始日期</string>
+    <!-- Error messge for missing End date date in search form -->
+    <string name="error_missing_end_date_param">缺少结束日期</string>
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
@@ -253,9 +275,9 @@
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">往返</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
-    <string name="total_with_tax">总额</string>
+    <string name="total_with_tax">总计（含税）</string>
     <!-- Label describing the total price of the flight or hotel, when we're including mandatory taxes & fees -->
-    <string name="trip_total">旅行总额</string>
+    <string name="trip_total">旅行费用总计</string>
 
     <!-- Tablet hotel trip bucket -->
     <!-- Progress dialog text while creating a trip -->
@@ -367,6 +389,10 @@
     <!-- Notifications -->
     <!-- Title for flight Check In Local Notification -->
     <string name="Check_in_available">可以办理登机</string>
+    <!-- Title for flight share In Local Notification -->
+    <string name="Share_flight_itinerary_title">分享航班信息</string>
+    <!-- Content for flight share In Local Notification -->
+    <string name="Share_flight_itinerary_content">允许其他人在您的旅行期间接收实时更新。</string>
     <!-- Content for flight Check In Local Notification -->
     <string name="x_flight_to_x_TEMPLATE">%1$s 个航班飞往 %2$s</string>
     <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
@@ -829,6 +855,7 @@
     <string name="itin_action_redeem">兑换</string>
     <string name="itin_action_support">客户支持服务</string>
     <string name="itin_action_share">分享</string>
+    <string name="itin_action_view">查看行程</string>
 
     <!-- Itin webview titles -->
     <string name="webview_title_print_vouchers">打印代金券</string>
@@ -1160,7 +1187,7 @@
     <!-- Label for Overview activity in task manager -->
     <string name="Overview">概要</string>
     <!-- Trip total price label -->
-    <string name="total_price_label">总价</string>
+    <string name="total_price_label">旅行费用总计</string>
     <!-- Your trip to template -->
     <string name="your_trip_to_TEMPLATE">%1$s之行</string>
     <!-- Includes taxes and fees -->
@@ -1214,7 +1241,7 @@
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">您的卡将被收取 %1$s</string>
     <!-- Amount to be paid now -->
-    <string name="Amount_to_be_paid_now_TEMPLATE">现在要支付的金额 %1$s</string>
+    <string name="Amount_to_be_paid_now_TEMPLATE">现在应付金额：%1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
     <string name="collected_by_the_hotel_TEMPLATE">需要由酒店收取的费用：%1$s</string>
     <!-- "Finish Booking" button that appears after CVV is entered -->
@@ -1246,7 +1273,7 @@
     <!-- Button showing for when the user can click it to close the cost breakdown dialog -->
     <string name="done">完成</string>
     <!-- Label to show user in cost breakdown for the total being charged to them right now -->
-    <string name="total_due_today">今日要支付的总金额</string>
+    <string name="total_due_today">今天要付给 Expedia 的金额</string>
     <!-- Label to show user when they use unsupported characters in their name or address -->
     <string name="please_use_the_roman_alphabet">请使用拉丁字母</string>
     <!-- Label to show user when they use unsupported characters in their email -->
@@ -1254,9 +1281,17 @@
     <!-- Row header for when we show resort fees as its own line item -->
     <string name="fees_paid_at_hotel">需在酒店支付的费用：</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe Expedia at the time of reservation-->
-    <string name="total_due_to_expedia_today">今天要付给 Expedia 的总额：</string>
+    <string name="total_due_to_expedia_today">今天要付给 Expedia 的金额：</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
-    <string name="resort_fee_disclaimer_TEMPLATE">度假费用 &lt;b&gt;%1$s&lt;/b&gt; 将在酒店收取。您的住宿总额为 &lt;b&gt;%2$s&lt;/b&gt;。</string>
+    <string name="resort_fee_disclaimer_TEMPLATE">度假费用 &lt;b&gt;%1$s&lt;/b&gt; 将在酒店收取。您的住宿费用总计 &lt;b&gt;%2$s&lt;/b&gt;。</string>
+    <!-- Pay later disclaimer at bottom of checkout -->
+    <string name="pay_later_disclaimer_TEMPLATE">您的旅行费用总计 &lt;b&gt;%1$s&lt;/b&gt;。您将在住宿期间以酒店当地货币支付您的预订总额。</string>
+    <!-- Pay later disclaimer with deposit -->
+    <string name="pay_later_deposit_disclaimer_TEMPLATE">现在将向您收取押金 &lt;b&gt;%1$s&lt;/b&gt;。您将在住宿期间以酒店当地货币支付您的预订余额。</string>
+    <!-- Pay later disclaimer with resort fees -->
+    <string name="pay_later_resort_disclaimer_TEMPLATE">您的旅行费用总计 &lt;b&gt;%1$s&lt;/b&gt;，包含度假费 &lt;b&gt;%2$s&lt;/b&gt;。您将在住宿期间以酒店当地货币支付您的预订总额。</string>
+    <!-- Pay later disclaimer with deposit and resort fees -->
+    <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">您的旅行费用总计 &lt;b&gt;%1$s&lt;/b&gt;，包含度假费 &lt;b&gt;%2$s&lt;/b&gt;。您将在住宿期间以酒店当地货币支付您的预订余额。</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1704,8 +1739,8 @@
     <string name="drag_to_extend_your_stay">&lt;b&gt;拖动&lt;/b&gt;屏幕可延长您的住宿天数。</string>
     <!-- Child age dialog button -->
     <string name="button_done">完成</string>
-    <!-- Done button text in hotel Confirmation screen for VSC -->
-    <string name="button_done_vsc_confirmation">完成</string>
+    <!-- Done button text in Confirmation screens -->
+    <string name="button_confirmation_done">完成</string>
     <!-- Label for child age selection prompt -->
     <plurals name="select_each_childs_age">
         <item quantity="one">选择儿童年龄</item>
@@ -1766,7 +1801,7 @@
     <!-- Label to swtich between map and list search results -->
     <string name="switch_view">切换视图</string>
     <!-- Expedia Deal for a given property, Mobile exclusive -->
-    <string name="mobile_exclusive">移动用户专享</string>
+    <string name="mobile_exclusive">手机+平板尊享优惠</string>
     <!-- Expedia Deal for a given property, tonight only -->
     <string name="tonight_only">只限今晚！</string>
     <!-- Expedia sponsored listing -->
@@ -2137,7 +2172,7 @@
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">已包含</string>
     <!-- Label for the "Mandatory Fees" -->
-    <string name="MandatoryFees">酒店费用（在酒店付款）</string>
+    <string name="MandatoryFees">需付给酒店的费用</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">折扣</string>
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
